Add curseforge user support
