# src/routes/curseforge/metaRoutes.js
@@ -3,6 +3,6 @@ import { getCurseforgeMeta } from "../../controllers/curseforgeController.js";
 
 const router = express.Router();
 
-router.get("/curseforge/meta/:projectId", getCurseforgeMeta);
+router.get("/curseforge/meta/:type/:id", getCurseforgeMeta);
 
 export default router;
